--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
 <body>
 
 <section>
+
   <a class="hover-box"href="#">
   <img src="images/orange.jpg" alt="">
-  <h2>Orange Butterflies</h2>
+  <h2>Orange butterflies</h2>
   </a>
+
   <a class="hover-box"href="#">
   <img src="images/black.jpg" alt="">
-  <h2>Black Butterflies</h2>
+  <h2>Black butterflies</h2>
   </a>
+
   <a class="hover-box"href="#">
   <img src="images/blue.jpg" alt="">
-  <h2>Blue Butterflies</h2>
+  <h2>Blue butterflies</h2>
   </a>
+
   <a class="hover-box"href="#">
   <img src="images/yellow.jpg" alt="">
-  <h2>Yellow Butterflies</h2>
+  <h2>Yellow butterflies</h2>
   </a>
 </section>
 
